--- a/country_club_queries.ipynb
+++ b/country_club_queries.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This mini-project demonstrates data-wrangling with SQL. I set up a local SQLite database and will interact with it from within Python.\n",
+    "This mini-project demonstrates data-wrangling with SQL. I set up a local SQLite database and will interact with it from within Python. Whenever i want will return a table, I read the data into pandas since this displays them in a more readable way.\n",
+    "\n",
+    "\n",
     "Let's start by connecting to the database:"
    ]
   },
@@ -446,6 +448,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following doesn't seem to work in MySQL, but it works in SQLite:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -515,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +837,7 @@
        "45       Tracy, Burton  Tennis Court 2"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,18 +858,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Q8: How can you produce a list of bookings on the day of 2012-09-14 which\n",
+    "**Q8: How can you produce a list of bookings on the day of 2012-09-14 which\n",
     "will cost the member (or guest) more than $30? Remember that guests have\n",
     "different costs to members (the listed costs are per half-hour 'slot'), and\n",
     "the guest user's ID is always 0. Include in your output the name of the\n",
     "facility, the name of the member formatted as a single column, and the cost.\n",
-    "Order by descending cost, and do not use any subqueries. */\n",
-    "\n",
-    "\n",
-    "/* Q9: This time, produce the same result as in Q8, but using a subquery. */\n",
-    "\n",
-    "\n",
-    "/* Q10: Produce a list of facilities with a total revenue less than 1000.\n",
+    "Order by descending cost, and do not use any subqueries. **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>member_name</th>\n",
+       "      <th>facility_name</th>\n",
+       "      <th>cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Tennis Court 1</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Tennis Court 1</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Tennis Court 2</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Tennis Court 2</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Massage Room 1</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Massage Room 1</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Farrell, Jemima</td>\n",
+       "      <td>Massage Room 1</td>\n",
+       "      <td>39.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Massage Room 1</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Massage Room 2</td>\n",
+       "      <td>320.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Squash Court</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Squash Court</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>GUEST, GUEST</td>\n",
+       "      <td>Squash Court</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        member_name   facility_name   cost\n",
+       "0      GUEST, GUEST  Tennis Court 1   75.0\n",
+       "1      GUEST, GUEST  Tennis Court 1   75.0\n",
+       "2      GUEST, GUEST  Tennis Court 2   75.0\n",
+       "3      GUEST, GUEST  Tennis Court 2  150.0\n",
+       "4      GUEST, GUEST  Massage Room 1  160.0\n",
+       "5      GUEST, GUEST  Massage Room 1  160.0\n",
+       "6   Farrell, Jemima  Massage Room 1   39.6\n",
+       "7      GUEST, GUEST  Massage Room 1  160.0\n",
+       "8      GUEST, GUEST  Massage Room 2  320.0\n",
+       "9      GUEST, GUEST    Squash Court   70.0\n",
+       "10     GUEST, GUEST    Squash Court   35.0\n",
+       "11     GUEST, GUEST    Squash Court   35.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query('''SELECT Members.surname || ', ' || Members.firstname AS member_name,\n",
+    "                            Facilities.name AS facility_name,\n",
+    "                            CASE WHEN Bookings.memid = 0 THEN Facilities.guestcost*Bookings.slots\n",
+    "                                 ELSE Facilities.membercost*Bookings.slots END AS cost\n",
+    "                       FROM Bookings\n",
+    "                  LEFT JOIN Facilities\n",
+    "                         ON Bookings.facid = Facilities.facid\n",
+    "                  LEFT JOIN Members\n",
+    "                         ON Members.memid = Bookings.memid\n",
+    "                      WHERE date(starttime) = '2012-09-14'\n",
+    "                        AND cost > 30''', conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Q9: This time, produce the same result as in Q8, but using a subquery. */\n",
+    "* Q10: Produce a list of facilities with a total revenue less than 1000.\n",
     "The output of facility name and total revenue, sorted by revenue. Remember\n",
     "that there's a different cost for guests and members! */"
    ]
@@ -877,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +1102,7 @@
        "1    555-555-5555                2012-07-02 12:02:05  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
