Fixes spelling mistake.

--- a/country_club_queries.ipynb
+++ b/country_club_queries.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This mini-project demonstrates data-wrangling with SQL. I set up a local SQLite database and will interact with it from within Python. Whenever i want will return a table, I read the data into pandas since this displays them in a more readable way.\n",
+    "This mini-project demonstrates data-wrangling with SQL. I set up a local SQLite database and will interact with it from within Python. Whenever a query returns a table, I read the data into pandas since this displays them in a more readable way.\n",
     "\n",
     "\n",
     "Let's start by connecting to the database:"
