Answers questions 1 and 2.

--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -23,14 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
-    "API_KEY = ''"
+    "exec(open ('../../config.py').read ()) # Load file where API keys are stored\n",
+    "API_KEY = QUANDL_API_KEY"
    ]
   },
   {
@@ -79,63 +78,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# First, import the relevant modules\n",
-    "\n"
+    "import requests\n",
+    "from collections import namedtuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now, call the Quandl API and pull out a small sample of the data (only one day) to get a glimpse\n",
-    "# into the JSON structure that will be returned\n"
+    "# into the JSON structure that will be returned\n",
+    "url= 'https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?&start_date=2018-08-21&end_date=2018-08-21&api_key={}' \\\n",
+    "        .format(API_KEY)\n",
+    "r = requests.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id :\n",
+      " 10095370 \n",
+      "\n",
+      "dataset_code :\n",
+      " AFX_X \n",
+      "\n",
+      "database_code :\n",
+      " FSE \n",
+      "\n",
+      "name :\n",
+      " Carl Zeiss Meditec (AFX_X) \n",
+      "\n",
+      "description :\n",
+      " Stock Prices for Carl Zeiss Meditec (AFX) from the Frankfurt Stock Exchange.<br><br>Trading System: Xetra<br><br>ISIN: DE0005313704 \n",
+      "\n",
+      "refreshed_at :\n",
+      " 2018-08-21T22:28:24.441Z \n",
+      "\n",
+      "newest_available_date :\n",
+      " 2018-08-21 \n",
+      "\n",
+      "oldest_available_date :\n",
+      " 2000-06-07 \n",
+      "\n",
+      "column_names :\n",
+      " ['Date', 'Open', 'High', 'Low', 'Close', 'Change', 'Traded Volume', 'Turnover', 'Last Price of the Day', 'Daily Traded Units', 'Daily Turnover'] \n",
+      "\n",
+      "frequency :\n",
+      " daily \n",
+      "\n",
+      "type :\n",
+      " Time Series \n",
+      "\n",
+      "premium :\n",
+      " False \n",
+      "\n",
+      "limit :\n",
+      " None \n",
+      "\n",
+      "transform :\n",
+      " None \n",
+      "\n",
+      "column_index :\n",
+      " None \n",
+      "\n",
+      "start_date :\n",
+      " 2018-08-21 \n",
+      "\n",
+      "end_date :\n",
+      " 2018-08-21 \n",
+      "\n",
+      "data :\n",
+      " [['2018-08-21', None, 74.55, 73.0, 73.9, None, 75511.0, 5575558.0, None, None, None]] \n",
+      "\n",
+      "collapse :\n",
+      " None \n",
+      "\n",
+      "order :\n",
+      " None \n",
+      "\n",
+      "database_id :\n",
+      " 6129 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Inspect the JSON structure of the object you created, and take note of how nested it is,\n",
-    "# as well as the overall structure\n"
+    "# as well as the overall structure\n",
+    "\n",
+    "# The top level dictionary only has one key ('dataset'), so let's focus on its value, which is another dictionary.\n",
+    "for key, value in r.json()['dataset'].items(): \n",
+    "    print(key, \":\\n\", value, \"\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are your tasks for this mini project:\n",
+    "##  These are your tasks for this mini project:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**1. Collect data from the Franfurt Stock Exchange, for the ticker AFX_X, for the whole year 2017 (keep in mind that the date format is YYYY-MM-DD).**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url= 'https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?&start_date=2017-01-01&end_date=2017-12-31&api_key={}'.format(API_KEY)\n",
+    "r = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Convert the returned JSON object into a Python dictionary.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_json = r.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Calculate what the highest and lowest opening prices were for the stock in this period.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The challenge is that the object that contains the data of interest is a list of lists.  To make accessing the relevant data easier, I start by converting this object into a named tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace spaces in column names\n",
+    "names = [name.replace(' ', '_') for name in r_json['dataset']['column_names']]\n",
     "\n",
-    "1. Collect data from the Franfurt Stock Exchange, for the ticker AFX_X, for the whole year 2017 (keep in mind that the date format is YYYY-MM-DD).\n",
-    "2. Convert the returned JSON object into a Python dictionary.\n",
-    "3. Calculate what the highest and lowest opening prices were for the stock in this period.\n",
-    "4. What was the largest change in any one day (based on High and Low price)?\n",
-    "5. What was the largest change between any two days (based on Closing Price)?\n",
-    "6. What was the average daily trading volume during this year?\n",
-    "7. (Optional) What was the median trading volume during this year. (Note: you may need to implement your own function for calculating the median.)"
+    "# Create namedtuple class\n",
+    "Data = namedtuple('data', names)\n",
+    "\n",
+    "# Create namedtuple out of 'dataset', which currently is a list of list.\n",
+    "for date in r_json['dataset']['data']:\n",
+    "    d = Data._make(date)\n",
+    "    # print(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "data(Date='2017-01-02', Open=34.99, High=35.94, Low=34.99, Close=35.8, Change=None, Traded_Volume=44700.0, Turnover=1590561.0, Last_Price_of_the_Day=None, Daily_Traded_Units=None, Daily_Turnover=None)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "type(d)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. What was the largest change in any one day (based on High and Low price)?\n",
+    "5. What was the largest change between any two days (based on Closing Price)?\n",
+    "6. What was the average daily trading volume during this year?\n",
+    "7. (Optional) What was the median trading volume during this year. (Note: you may need to implement your own function for calculating the median.)"
+   ]
   }
  ],
  "metadata": {
