Fixed indents for question 9

--- a/country_club_queries.ipynb
+++ b/country_club_queries.ipynb
@@ -39,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1213,13 +1215,13 @@
     "pd.read_sql_query('''SELECT Members.surname || ', ' || Members.firstname AS member_name,\n",
     "                            Costs.facility_name, Costs.cost\n",
     "                            FROM (\n",
-    "                             SELECT Facilities.name AS facility_name,\n",
-    "                                    CASE WHEN Bookings.memid = 0 THEN Facilities.guestcost*Bookings.slots\n",
-    "                                         ELSE Facilities.membercost*Bookings.slots END AS cost,\n",
-    "                                    starttime, memid\n",
-    "                                FROM Bookings\n",
-    "                                LEFT JOIN Facilities\n",
-    "                                          ON Bookings.facid = Facilities.facid\n",
+    "                                 SELECT Facilities.name AS facility_name,\n",
+    "                                   CASE WHEN Bookings.memid = 0 THEN Facilities.guestcost*Bookings.slots\n",
+    "                                        ELSE Facilities.membercost*Bookings.slots END AS cost,\n",
+    "                                        starttime, memid\n",
+    "                                   FROM Bookings\n",
+    "                              LEFT JOIN Facilities\n",
+    "                                     ON Bookings.facid = Facilities.facid\n",
     "                                  ) Costs\n",
     "                  LEFT JOIN Members\n",
     "                         ON Members.memid = Costs.memid\n",
