--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -180,7 +180,8 @@
     "# Inspect the JSON structure of the object you created, and take note of how nested it is,\n",
     "# as well as the overall structure\n",
     "\n",
-    "# The top level dictionary only has one key ('dataset'), so let's focus on its value, which is another dictionary.\n",
+    "# The top level dictionary only has one key ('dataset'), so let's focus on its value, which is another\n",
+    "# dictionary.\n",
     "for key, value in r.json()['dataset'].items(): \n",
     "    print(key, \":\\n\", value, \"\\n\")"
    ]
@@ -207,7 +208,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url= 'https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?&start_date=2017-01-01&end_date=2017-12-31&api_key={}'.format(API_KEY)\n",
+    "url= 'https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json' \\\n",
+    "     '?start_date=2017-01-01&end_date=2017-12-31&api_key={}' \\\n",
+    "        .format(API_KEY)\n",
     "r = requests.get(url)"
    ]
   },
@@ -252,41 +255,21 @@
     "# Replace spaces in column names and make them lowercase\n",
     "names = [name.replace(' ', '_').lower() for name in r_json['dataset']['column_names']]\n",
     "\n",
-    "# Create namedtuple class enter an empty list where to store instances\n",
+    "# Create namedtuple class and an empty list where to store instances\n",
     "Data = namedtuple('data', names)\n",
     "data =[]\n",
     "\n",
-    "# Create namedtuple out of 'dataset' (which currently is a list of list) and append to list.\n",
+    "# Create namedtuple instance from each observation and store in a list.\n",
     "for observation in r_json['dataset']['data']:\n",
     "    data.append(Data._make(observation))\n",
     "    \n",
-    "# Sort the data by ascending date\n",
+    "# Sort the observations by ascending date\n",
     "data = sorted(data, key=lambda observation: observation.date)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "data(date='2017-01-02', open=34.99, high=35.94, low=34.99, close=35.8, change=None, traded_volume=44700.0, turnover=1590561.0, last_price_of_the_day=None, daily_traded_units=None, daily_turnover=None)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -336,19 +319,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest change in any single day was 2.8100000000000023 and occurred on 2017-05-11.\n"
+      "The largest change in any single day was 2.81 and occurred on 2017-05-11.\n"
      ]
     }
    ],
    "source": [
-    "# Create a nametuple to store the maximum and associated date\n",
+    "# Create a nametuple class to store the maximum and associated date\n",
     "Maximum_change_within = namedtuple('Maximum_change_within', ['change', 'date']) \n",
     "\n",
     "# Instantiate it by filling it with the value from the first observation:\n",
@@ -362,7 +345,8 @@
     "        maximum_change_within = Maximum_change_within._make([change, observation.date])\n",
     "\n",
     "print('The largest change in any single day was {} and occurred on {}.'\n",
-    "         .format(maximum_change_within.change, maximum_change_within.date))"
+    "         .format(round(maximum_change_within.change, 2), \n",
+    "                 maximum_change_within.date))"
    ]
   },
   {
@@ -381,28 +365,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest change between any two days(based on closing price) was 1.7199999999999989 and occurred between 2017-05-10 and 2017-05-11.\n"
+      "The largest change between any two days(based on closing price) was 1.72 and occurred between 2017-05-10 and 2017-05-11.\n"
      ]
     }
    ],
    "source": [
-    "# Again create a name to a tuple 1st in which to store the values\n",
+    "# Again create a namedtuple class in which to store the values\n",
     "Maximum_change_between = namedtuple('Maximum_change_between',\n",
     "                                    ['change','date_begin', 'date_end'])\n",
     "\n",
-    "# Instantiate it by filling it with the value from the first observation\n",
+    "# Instantiate namedtuple by filling it with the value from the first observation\n",
     "maximum_change_between = Maximum_change_between._make([data[1].close - data[0].close, \n",
     "                                                       data[0].date, \n",
     "                                                       data[1].date])\n",
     "\n",
-    "# Loop over the remaining observations\n",
+    "# Loop over the remaining observations to find largest change\n",
     "for i in range(1, len(data) - 1):\n",
     "    change = data[i+1].close - data[i].close\n",
     "    if change > maximum_change_between.change:\n",
@@ -410,10 +394,10 @@
     "                                                               data[i].date, \n",
     "                                                               data[i+1].date])\n",
     "    \n",
-    "print('The largest change between any two days(based on closing price) '\n",
+    "print('The largest change between any two days (based on closing price) '\n",
     "      'was {} and occurred between {} and {}.'\n",
-    "         .format(maximum_change_between.change, maximum_change_between.date_begin, \n",
-    "                 maximum_change_between.date_end))"
+    "         .format(round(maximum_change_between.change, 2),\n",
+    "                 maximum_change_between.date_begin, maximum_change_between.date_end))"
    ]
   },
   {
@@ -425,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average daily trading volume during the year was 89124.33725490196.\n"
+      "The average daily trading volume during the year was 89124.34.\n"
      ]
     }
    ],
@@ -446,7 +430,7 @@
     "mean_trading_volume = sum(daily_trading_volume)/len(daily_trading_volume)\n",
     "\n",
     "print('The average daily trading volume during the year was {}.'\n",
-    "          .format(mean_trading_volume))"
+    "          .format(round(mean_trading_volume, 2)))"
    ]
   },
   {
@@ -458,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +451,7 @@
        "255"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -492,8 +476,7 @@
    ],
    "source": [
     "# Since it is odd, we can simply take the middle value\n",
-    "# (Round down to account for zero-based indexing)\n",
-    "middle_position = int(len(daily_trading_volume)/2 - .5) \n",
+    "middle_position = int(len(daily_trading_volume)/2 - .5) # Round down to account for zero-based indexing\n",
     "median_training_volume = sorted(daily_trading_volume)[middle_position]\n",
     "\n",
     "print('The median trading volume during the year was {}.'\n",
