--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -248,20 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace spaces in column names and make them lowercase\n",
     "names = [name.replace(' ', '_').lower() for name in r_json['dataset']['column_names']]\n",
     "\n",
-    "# Create namedtuple class and an empty list where to store instances\n",
+    "# Create namedtuple class \n",
     "Data = namedtuple('data', names)\n",
-    "data =[]\n",
     "\n",
     "# Create namedtuple instance from each observation and store in a list.\n",
-    "for observation in r_json['dataset']['data']:\n",
-    "    data.append(Data._make(observation))\n",
+    "data = [Data._make(observation) for observation in r_json['dataset']['data']]\n",
     "    \n",
     "# Sort the observations by ascending date\n",
     "data = sorted(data, key=lambda observation: observation.date)"
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -422,9 +420,7 @@
    ],
    "source": [
     "# Store the trading volume for each day in a list\n",
-    "daily_trading_volume =[]\n",
-    "for observation in data:\n",
-    "    daily_trading_volume.append(observation.traded_volume)\n",
+    "daily_trading_volume = [observation.traded_volume for observation in data]\n",
     "    \n",
     "# Compute mean\n",
     "mean_trading_volume = sum(daily_trading_volume)/len(daily_trading_volume)\n",
@@ -463,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -475,12 +471,16 @@
     }
    ],
    "source": [
-    "# Since it is odd, we can simply take the middle value\n",
-    "middle_position = int(len(daily_trading_volume)/2 - .5) # Round down to account for zero-based indexing\n",
-    "median_training_volume = sorted(daily_trading_volume)[middle_position]\n",
+    "# Define function to calculate median\n",
+    "def find_median(odd_list):\n",
+    "    \"\"\"Finds the median in a list containing an odd number of numeric values.\"\"\"\n",
+    "    \n",
+    "    middle_position = int(len(odd_list)/2 - .5) # Round down, not up, to account for zero-based indexing\n",
+    "    return sorted(odd_list)[middle_position]\n",
     "\n",
+    "median_trading_volume = find_median(daily_trading_volume)\n",
     "print('The median trading volume during the year was {}.'\n",
-    "          .format(median_training_volume))"
+    "          .format(median_trading_volume))"
    ]
   }
  ],
